[gd_scene load_steps=16 format=1]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/healthbar_container.png" type="Texture" id=2]
[ext_resource path="res://Art/healthbar.png" type="Texture" id=3]
[ext_resource path="res://Art/ammo_container.png" type="Texture" id=4]
[ext_resource path="res://Scenes/shell.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/cash.png" type="Texture" id=6]
[ext_resource path="res://Other/ingame.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Art/button.png" type="Texture" id=8]
[ext_resource path="res://Art/black_screen.png" type="Texture" id=9]
[ext_resource path="res://Art/blue_card.png" type="Texture" id=10]
[ext_resource path="res://Art/red_card.png" type="Texture" id=11]
[ext_resource path="res://Art/speed_boots.png" type="Texture" id=12]
[ext_resource path="res://Art/map.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]

resource/name = "transition_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -181 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "transition_out"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -181 ), Vector2( 0, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="HPContainer" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 49.0234, 173.52 )
texture = ExtResource( 2 )

[node name="healthbar" type="Sprite" parent="HPContainer"]

transform/pos = Vector2( -10.9753, 0.0250854 )
texture = ExtResource( 3 )
offset = Vector2( 21.1306, -0.0250854 )

[node name="AmmoContainer" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 159.023, 173.52 )
texture = ExtResource( 4 )

[node name="shell" parent="AmmoContainer" instance=ExtResource( 5 )]

transform/pos = Vector2( -18, 0 )

[node name="Cash" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 281, 173 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Cash"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -4.0
margin/top = -5.0
margin/right = 9.0
margin/bottom = 9.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextBox" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 11.0
margin/right = 250.0
margin/bottom = 51.0

[node name="Label" type="Label" parent="TextBox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 5.0
margin/right = 172.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 7 )
text = "This is a text box."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="TextBox/Label"]

transform/pos = Vector2( 163, 28 )
texture = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Curtain" type="Sprite" parent="."]

visibility/visible = false
z/z = 1
texture = ExtResource( 9 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/transition_in = SubResource( 1 )
anims/transition_out = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="BlueCard" type="Sprite" parent="."]

transform/pos = Vector2( 308, 171 )
texture = ExtResource( 10 )

[node name="RedCard" type="Sprite" parent="."]

transform/pos = Vector2( 308, 171 )
texture = ExtResource( 11 )

[node name="SpeedBoots" type="Sprite" parent="."]

transform/pos = Vector2( 308, 154 )
texture = ExtResource( 12 )

[node name="PauseMenu" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 34.0
margin/right = 96.0
margin/bottom = 98.0

[node name="QuitButton" type="Button" parent="PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 34.0
margin/right = 40.0
margin/bottom = 52.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "quit"
flat = false

[node name="ContinueButton" type="Button" parent="PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 10.0
margin/right = 61.0
margin/bottom = 28.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "continue"
flat = false

[node name="Map" type="Sprite" parent="PauseMenu"]

transform/pos = Vector2( 160, 50 )
transform/scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 13 )


